# mintverse

./: .gitignore  Cargo.toml  PHASE3_IMPLEMENTATION.md  docker-compose.yml  package.json  pnpm-lock.yaml  setup-database.sh  test_backend.sh
apps/backend/: .rustfmt.toml  Cargo.toml
apps/backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_add_nft_metadata.rs
apps/backend/src/: blockchain_sim.rs  database.rs  main.rs  minting_queue.rs
apps/backend/src/admin/: handlers.rs  mod.rs  types.rs
apps/backend/src/auth/: mod.rs  signup.rs  types.rs  user.rs
apps/backend/src/collections/: handlers.rs  types.rs
apps/backend/src/db_operations/: mod.rs  nft_ops.rs  user_ops.rs
apps/backend/src/entities/: mod.rs  nft.rs  user.rs
apps/backend/src/nft/: handlers.rs  types.rs
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/mint/: page.tsx
apps/web/app/my-nfts/: page.tsx
apps/web/app/nfts/: page.tsx
apps/web/app/purchase/: page.tsx
apps/web/app/tx/[hash]/: page.tsx
apps/web/components/: NFTCard.tsx  Navigation.tsx  SearchFilters.tsx
apps/web/hooks/: useMinting.ts
apps/web/lib/: api-client.ts  contract.ts  utils.ts
apps/web/prisma/: schema.prisma
apps/web/scripts/: generate-demo-data.ts  seed-data.js
