[package]
name = "rust-trm-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3.31"
reqwest = { version = "0.12.18", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
sea-orm = { version = "1.1.13", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
anyhow = "1.0.98"
regex = "1.11.1"
sea-orm-migration = { workspace = true }
dotenvy = "0.15"